--- a/GUI/Views/UserServicesView.xaml
+++ b/GUI/Views/UserServicesView.xaml
@@ -11,11 +11,18 @@
         WindowStartupLocation="CenterScreen"
         Closed="_window_Closed"
         Title="{Binding Title}">
+    <Window.CommandBindings>
+        <CommandBinding Command="Save" Executed="_save_MenuItem_Click"/>
+    </Window.CommandBindings>
+    <Window.InputBindings>
+        <KeyBinding Key="S" Modifiers="Control" Command="Save"/>
+    </Window.InputBindings>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
+        
         <StackPanel Grid.Row="0">
             <Menu>
                 <Menu.ItemsPanel>
@@ -25,7 +32,9 @@
                 </Menu.ItemsPanel>
                 <MenuItem Header="_Save"
                           IsEnabled="{Binding IsEnabled}"
-                          Click="_save_MenuItem_Click"/>
+                          Click="_save_MenuItem_Click"
+                          Command="Save"
+                          InputGestureText="Ctrl+S"/>
                 <MenuItem Header="_User settings"
                           IsEnabled="{Binding IsEnabled}"
                           Click="_userSettings_MenuItem_Click"/>
@@ -55,15 +64,19 @@
 
                     <Label Grid.Column="0"
                            Content="Service :"/>
-                    <TextBox Grid.Column="1"/>
+                    <TextBox Grid.Column="1"
+                             Text="{Binding ServiceFilter, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
                     <Label Grid.Column="2"
                            Content="Indentifiant :"/>
-                    <TextBox Grid.Column="3"/>
+                    <TextBox Grid.Column="3"
+                             Text="{Binding IdentifiantFilter, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
                     <Label Grid.Column="4"
                            Content="Text :"/>
-                    <TextBox Grid.Column="5"/>
+                    <TextBox Grid.Column="5"
+                             Text="{Binding TextFilter, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
                     <Button Grid.Column="6"
-                            Content="✕"/>
+                            Content="✕"
+                            Click="_filterClear_Button_Click"/>
                 </Grid>
             </GroupBox>
         </StackPanel>
@@ -94,6 +107,7 @@
             <Button Grid.Row="1"
                     Grid.Column="0"
                     IsEnabled="{Binding IsEnabled}"
+                    Click="_addService_Button_Click"
                     Content="+"/>
 
             <StackPanel Grid.Row="0"
