Removing IsEnabled = false on saving

--- a/GUI/Views/UserServicesView.xaml
+++ b/GUI/Views/UserServicesView.xaml
@@ -31,22 +31,16 @@
                     </ItemsPanelTemplate>
                 </Menu.ItemsPanel>
                 <MenuItem Header="_Save"
-                          IsEnabled="{Binding IsEnabled}"
                           Click="_save_MenuItem_Click"
                           Command="Save"
                           InputGestureText="Ctrl+S"/>
                 <MenuItem Header="_User settings"
-                          IsEnabled="{Binding IsEnabled}"
                           Click="_userSettings_MenuItem_Click"/>
                 <MenuItem Header="_Generate random Password"
-                          IsEnabled="{Binding IsEnabled}"
                           Click="_generateRandomPassword_MenuItem_Click"/>
-                <MenuItem Header="_Show warnings"
-                          IsEnabled="{Binding IsEnabled}"/>
-                <MenuItem Header="_Show logs"
-                          IsEnabled="{Binding IsEnabled}"/>
+                <MenuItem Header="_Show warnings"/>
+                <MenuItem Header="_Show logs"/>
                 <MenuItem Header="_Logout"
-                          IsEnabled="{Binding IsEnabled}"
                           HorizontalAlignment="Right"
                           Click="_logout_MenuItem_Click"/>
             </Menu>
@@ -98,23 +92,20 @@
                 <ListBox.ItemTemplate>
                     <DataTemplate>
                         <Label Margin="0"
-                               IsEnabled="{Binding IsEnabled}"
                                Content="{Binding ServiceDisplay}"
-                               Background="{Binding ServiceDisplayBackground}"/>
+                               Background="Transparent"/>
                     </DataTemplate>
                 </ListBox.ItemTemplate>
             </ListBox>
             <Button Grid.Row="1"
                     Grid.Column="0"
-                    IsEnabled="{Binding IsEnabled}"
                     Click="_addService_Button_Click"
                     Content="+"/>
 
             <StackPanel Grid.Row="0"
                         Grid.RowSpan="2"
                         Grid.Column="1">
-                <Controls:ServiceView x:Name="_service_SV"
-                                      IsEnabled="{Binding IsEnabled}"/>
+                <Controls:ServiceView x:Name="_service_SV"/>
             </StackPanel>
         </Grid>
     </Grid>
