--- a/GUI/Views/UserSettingsView.xaml
+++ b/GUI/Views/UserSettingsView.xaml
@@ -24,10 +24,8 @@
                 </ItemsPanelTemplate>
             </Menu.ItemsPanel>
             <MenuItem Header="_Save"
-                      IsEnabled="{Binding IsEnabled}"
                       Click="_save_MenuItem_Click"/>
             <MenuItem Name="_deleteUser"
-                      IsEnabled="{Binding IsEnabled}"
                       Header="_Delete User"
                       HorizontalAlignment="Right"
                       Click="_deleteUser_MenuItem_Click"/>
@@ -40,11 +38,9 @@
                     <StackPanel Orientation="Horizontal">
                         <Label>Username :</Label>
                         <TextBox Width="400"
-                                 IsEnabled="{Binding IsEnabled}"
                                  Text="{Binding Username, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
                     </StackPanel>
-                    <Controls:PasswordsContainer x:Name="_passwordsContainer"
-                                                 IsEnabled="{Binding IsEnabled}"/>
+                    <Controls:PasswordsContainer x:Name="_passwordsContainer"/>
                 </StackPanel>
             </GroupBox>
             <GroupBox Header="Settings">
@@ -52,7 +48,6 @@
                     <StackPanel Orientation="Horizontal">
                         <Label Margin="0">Log out after</Label>
                         <TextBox Width="25"
-                                 IsEnabled="{Binding IsEnabled}"
                                  HorizontalContentAlignment="Center"
                                  TextChanged="_value_TextBox_TextChanged"
                                  PreviewTextInput="_value_TextBox_PreviewTextInput"
@@ -63,7 +58,6 @@
                     <StackPanel Orientation="Horizontal">
                         <Label Margin="0">Clean any passwords in clipboard every</Label>
                         <TextBox Width="35"
-                                 IsEnabled="{Binding IsEnabled}"
                                  HorizontalContentAlignment="Center"
                                  TextChanged="_value_TextBox_TextChanged"
                                  PreviewTextInput="_value_TextBox_PreviewTextInput"
@@ -74,18 +68,10 @@
                     <Label>* Put '0' value to disable the option.</Label>
                     <GroupBox Header="Warnings">
                         <StackPanel>
-                            <CheckBox
-                                IsEnabled="{Binding IsEnabled}"
-                                IsChecked="{Binding NotifyLogReview}">Notify Log Review</CheckBox>
-                            <CheckBox
-                                IsEnabled="{Binding IsEnabled}"
-                                IsChecked="{Binding NotifyDuplicatedPasswords}">Notify Duplicated Passwords</CheckBox>
-                            <CheckBox
-                                IsEnabled="{Binding IsEnabled}"
-                                IsChecked="{Binding NotifyPasswordUpdateReminder}">Notify Password Update Reminder</CheckBox>
-                            <CheckBox
-                                IsEnabled="{Binding IsEnabled}"
-                                IsChecked="{Binding NotifyPasswordLeaked}">Notify Password Leaked</CheckBox>
+                            <CheckBox IsChecked="{Binding NotifyLogReview}">Notify Log Review</CheckBox>
+                            <CheckBox IsChecked="{Binding NotifyDuplicatedPasswords}">Notify Duplicated Passwords</CheckBox>
+                            <CheckBox IsChecked="{Binding NotifyPasswordUpdateReminder}">Notify Password Update Reminder</CheckBox>
+                            <CheckBox IsChecked="{Binding NotifyPasswordLeaked}">Notify Password Leaked</CheckBox>
                         </StackPanel>
                     </GroupBox>
                 </StackPanel>
