--- a/GUI/Views/Controls/ServiceView.xaml
+++ b/GUI/Views/Controls/ServiceView.xaml
@@ -46,6 +46,7 @@
             <Grid>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="*"/>
+                    <RowDefinition Height="Auto"/>
                 </Grid.RowDefinitions>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto"/>
@@ -54,8 +55,25 @@
                 <ListBox Grid.Row="0"
                          Grid.Column="0"
                          Name="_accounts_LB"
-                         ScrollViewer.VerticalScrollBarVisibility="Auto">
+                         ScrollViewer.VerticalScrollBarVisibility="Auto"
+                         SelectionChanged="_accounts_LB_SelectionChanged">
+                    <ListBox.ItemTemplate>
+                        <DataTemplate>
+                            <Label Margin="0"
+                               Content="{Binding AccountDisplay}"
+                               Background="Transparent"/>
+                        </DataTemplate>
+                    </ListBox.ItemTemplate>
                 </ListBox>
+                <Button Grid.Row="1"
+                    Grid.Column="0"
+                    Click="_addAccount_Button_Click"
+                    Content="+"/>
+                <StackPanel Grid.Row="0"
+                        Grid.RowSpan="2"
+                        Grid.Column="1">
+                    <local:AccountView x:Name="_account_AV" />
+                </StackPanel>
             </Grid>
         </StackPanel>
     </GroupBox>
