--- a/GUI/Views/Controls/AccountView.xaml
+++ b/GUI/Views/Controls/AccountView.xaml
@@ -6,36 +6,39 @@
              xmlns:local="clr-namespace:Upsilon.Apps.Passkey.GUI.Views.Controls"
              xmlns:controls="clr-namespace:Upsilon.Apps.Passkey.GUI.ViewModels.Controls"
              d:DataContext="{d:DesignInstance Type=controls:AccountViewModel}"
-             mc:Ignorable="d" d:DesignHeight="49.315" d:DesignWidth="80.658">
-    <GroupBox Header="{Binding AccountId}">
-        <StackPanel>
-            <Grid>
-                <Grid.RowDefinitions>
-                    <RowDefinition/>
-                    <RowDefinition/>
-                    <RowDefinition/>
-                </Grid.RowDefinitions>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="Auto"/>
-                    <ColumnDefinition Width="*"/>
-                </Grid.ColumnDefinitions>
-                <Label Grid.Row="0"
-                       Grid.Column="0"
-                       Content="Label : "/>
-                <TextBox Grid.Row="0"
-                         Grid.Column="1"
-                         Text="{Binding Label, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                         Background="{Binding LabelBackground}"/>
-                <Label Grid.Row="2"
-                       Grid.Column="0"
-                       Content="Notes : "/>
-                <TextBox Grid.Row="2"
-                         Grid.Column="1"
-                         Text="{Binding Notes, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                         Background="{Binding NotesBackground}"
-                         AcceptsReturn="True"
-                         AcceptsTab="True"/>
-            </Grid>
-        </StackPanel>
-    </GroupBox>
+             mc:Ignorable="d">
+    <DockPanel VerticalAlignment="Stretch">
+        <GroupBox Header="{Binding AccountId}"
+                  DockPanel.Dock="Top">
+            <StackPanel>
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition/>
+                        <RowDefinition/>
+                        <RowDefinition/>
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+                    <Label Grid.Row="0"
+                           Grid.Column="0"
+                           Content="Label : "/>
+                    <TextBox Grid.Row="0"
+                             Grid.Column="1"
+                             Text="{Binding Label, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                             Background="{Binding LabelBackground}"/>
+                    <Label Grid.Row="2"
+                           Grid.Column="0"
+                           Content="Notes : "/>
+                    <TextBox Grid.Row="2"
+                             Grid.Column="1"
+                             Text="{Binding Notes, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                             Background="{Binding NotesBackground}"
+                             AcceptsReturn="True"
+                             AcceptsTab="True"/>
+                </Grid>
+            </StackPanel>
+        </GroupBox>
+    </DockPanel>
 </UserControl>
