--- a/GUI/Views/Controls/UserPasswordItem.xaml
+++ b/GUI/Views/Controls/UserPasswordItem.xaml
@@ -1,11 +1,11 @@
-﻿<UserControl x:Class="Upsilon.Apps.Passkey.GUI.Views.Controls.PasswordItem"
+﻿<UserControl x:Class="Upsilon.Apps.Passkey.GUI.Views.Controls.UserPasswordItem"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Upsilon.Apps.Passkey.GUI.Views.Controls"
              xmlns:controls="clr-namespace:Upsilon.Apps.Passkey.GUI.ViewModels.Controls"
-             d:DataContext="{d:DesignInstance Type=controls:PasswordItemViewModel}"
+             d:DataContext="{d:DesignInstance Type=controls:UserPasswordItemViewModel}"
              mc:Ignorable="d">
     <Grid>
         <Grid.ColumnDefinitions>
