--- a/GUI/Views/Controls/UserPasswordsContainer.xaml
+++ b/GUI/Views/Controls/UserPasswordsContainer.xaml
@@ -1,11 +1,11 @@
-﻿<UserControl x:Class="Upsilon.Apps.Passkey.GUI.Views.Controls.PasswordsContainer"
+﻿<UserControl x:Class="Upsilon.Apps.Passkey.GUI.Views.Controls.UserPasswordsContainer"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Upsilon.Apps.Passkey.GUI.Views.Controls"
              mc:Ignorable="d"
-             Height="365">
+             Height="180">
     <GroupBox Header="Passwords">
         <ScrollViewer VerticalScrollBarVisibility="Auto"
                       HorizontalScrollBarVisibility="Disabled">
