--- a/GUI/Views/Controls/AccountView.xaml
+++ b/GUI/Views/Controls/AccountView.xaml
@@ -13,6 +13,7 @@
             <Grid>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="*"/>
                     <RowDefinition Height="Auto"/>
                     <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
@@ -27,17 +28,21 @@
                             Grid.Column="1"
                             Text="{Binding Label, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                             Background="{Binding LabelBackground}"/>
-                <Label Grid.Row="1"
+                <local:AccountIdentifiantsView x:Name="_identifiants_AIV"
+                                               Grid.Row="1"
+                                               Grid.Column="0"
+                                               Grid.ColumnSpan="2"/>
+                <Label Grid.Row="2"
                         Grid.Column="0"
                         Content="Notes : "/>
-                <TextBox Grid.Row="1"
+                <TextBox Grid.Row="2"
                             Grid.Column="1"
                             Text="{Binding Notes, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                             Background="{Binding NotesBackground}"
                             AcceptsReturn="True"
                             AcceptsTab="True"/>
                 <GroupBox Header="Options"
-                            Grid.Row="2"
+                            Grid.Row="3"
                             Grid.Column="0"
                             Grid.ColumnSpan="2">
                     <StackPanel>
