--- a/GUI/Views/Controls/ServiceView.xaml
+++ b/GUI/Views/Controls/ServiceView.xaml
@@ -71,10 +71,19 @@
                             </DataTemplate>
                         </ListBox.ItemTemplate>
                     </ListBox>
-                    <Button Grid.Row="1"
-                            Grid.Column="0"
+                    <Grid Grid.Row="1"
+                            Grid.Column="0">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="Auto"/>
+                        </Grid.ColumnDefinitions>
+                        <Button Grid.Column="0"
                             Click="_addAccount_Button_Click"
                             Content="+"/>
+                        <Button Grid.Column="1"
+                            Click="_deleteAccount_Button_Click"
+                            Content="✕"/>
+                    </Grid>
                     <local:AccountView x:Name="_account_AV"
                                        Grid.Row="0"
                                        Grid.RowSpan="2"
